--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@tailwindcss/forms": "^0.5.4",
-    "@types/node": "20.4.7",
-    "@types/react": "18.2.18",
+    "@types/mdx": "^2.0.5",
+    "@types/node": "^20.4.7",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "gray-matter": "^4.0.3",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@heroicons/react": "^2.0.18",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "tinytime": "^0.2.6"
   }
 }
