--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "eslint-config-next": "13.4.12",
     "gray-matter": "^4.0.3",
     "next": "13.4.12",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-syntax-highlighter": "^15.5.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
+    "tailwindcss-dark-mode": "^1.1.7",
     "typescript": "5.1.6"
   },
   "devDependencies": {
