--- a/package.json
+++ b/package.json
@@ -10,29 +10,50 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.13",
     "@tailwindcss/forms": "^0.5.4",
-    "@types/mdx": "^2.0.5",
+    "@types/mdx": "^2.0.6",
     "@types/node": "^20.4.7",
     "@types/react": "^18.2.18",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
+    "clsx": "^2.0.0",
+    "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "from": "^0.1.7",
+    "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
+    "hasha": "^5.2.2",
+    "image-size": "^1.0.2",
+    "import": "^0.0.6",
     "next": "13.4.12",
+    "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.10.0",
+    "rehype-slug": "^5.1.0",
     "remark": "^14.0.3",
+    "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2",
-    "tailwindcss-dark-mode": "^1.1.7",
+    "remark-mdx-images": "^2.0.0",
+    "sharp": "^0.32.4",
+    "shiki": "^0.14.3",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-dark-mode": "^1.1.4",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@heroicons/react": "^2.0.18",
+    "@types/fs-extra": "^11.0.1",
     "@types/react-syntax-highlighter": "^15.5.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
