--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hashicorp/react-code-block": "^6.4.0",
     "@headlessui/react": "^1.7.16",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
@@ -27,6 +28,8 @@
     "eslint-config-next": "13.4.12",
     "from": "^0.1.7",
     "fs-extra": "^11.1.1",
+    "gatsby-plugin-mdx": "^5.12.0",
+    "gatsby-source-filesystem": "^5.12.0",
     "gray-matter": "^4.0.3",
     "hasha": "^5.2.2",
     "image-size": "^1.0.2",
