--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@hashicorp/react-code-block": "^6.4.0",
     "@headlessui/react": "^1.7.16",
+    "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.13",
+    "@next/mdx": "^13.4.19",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tailwindcss/forms": "^0.5.4",
     "@types/mdx": "^2.0.6",
@@ -38,22 +39,28 @@
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-code-blocks": "^0.1.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-pretty-code": "^0.10.0",
+    "rehype-code-titles": "^1.2.0",
+    "rehype-highlight": "^6.0.0",
+    "rehype-pretty-code": "^0.10.1",
+    "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^5.1.0",
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2",
     "remark-mdx-images": "^2.0.0",
     "sharp": "^0.32.4",
-    "shiki": "^0.14.3",
+    "shiki": "^0.14.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-dark-mode": "^1.1.4",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@heroicons/react": "^2.0.18",
