--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@hashicorp/react-code-block": "^6.4.0",
     "@headlessui/react": "^1.7.16",
     "@mapbox/rehype-prism": "^0.8.0",
@@ -25,6 +26,7 @@
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
+    "emailjs": "^4.0.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "from": "^0.1.7",
