--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "18.2.0",
     "react-code-blocks": "^0.1.3",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@heroicons/react": "^2.0.18",
     "@types/fs-extra": "^11.0.1",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-syntax-highlighter": "^15.5.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
