--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
+    "axios": "^1.6.7",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
