--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@hashicorp/react-code-block": "^6.4.0",
     "@headlessui/react": "^1.7.16",
     "@mapbox/rehype-prism": "^0.8.0",
@@ -22,9 +23,11 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
+    "axios": "^1.6.7",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
+    "emailjs": "^4.0.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "from": "^0.1.7",
@@ -41,6 +44,7 @@
     "react": "18.2.0",
     "react-code-blocks": "^0.1.3",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
@@ -65,6 +69,7 @@
   "devDependencies": {
     "@heroicons/react": "^2.0.18",
     "@types/fs-extra": "^11.0.1",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-syntax-highlighter": "^15.5.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
