--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.19",
+    "@next/third-parties": "^14.1.4",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tailwindcss/forms": "^0.5.4",
     "@types/mdx": "^2.0.6",
